--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -18,8 +18,7 @@
 
     <main>
         <div class="container flex">
-            <img src="../static/images/present.png" class="main-figure">
-            <h1 class="phrase">あなたの思い出をアーカイブ<br>返礼品を一緒に考えます</h1>
+            <h1 class="phrase">おすすめの返礼品はこれ！</h1>
         </div>
     </main>
     
