[add]削除機能を追加

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -116,11 +116,7 @@
                                 <div class="button_flex">
                                     <button id="submit-button" class="ui fluid large teal submit button" type="submit">編集</button>
                                     <a href="{{ url_for('list') }}" class="ui button large submit button">戻る</a>
-                                    <a href="{{ url_for('delete_entry', id=post.id) }}" class="ui button red large submit button">削除</a>
-
-                                    <!-- <form action="{{ url_for('delete_entry', id=post.id) }}" method="POST"></form>
-                                        <button id="delete-button" class="ui red large red submit button" type="submit">削除</button>
-                                    </form> -->
+                                    <a href="{{ url_for('delete_entry', id=post.id) }}" class="ui button red large submit button" onclick="return confirm('本当に削除してもよろしいですか？')">削除</a>
                                 </div>
 
                     </form>
@@ -137,10 +133,10 @@
             var fileInput = document.getElementById('fileInput');
             var previewImage = document.getElementById('previewImage');
             var deleteButton = document.getElementById('delete-button');
-    
+
             fileInput.addEventListener('change', function (event) {
                 var file = event.target.files[0];
-    
+
                 if (file) {
                     var reader = new FileReader();
                     reader.onload = function (e) {
@@ -153,6 +149,7 @@
                 // フォームの submit を防ぐ
                 event.preventDefault();
             });
+
         };
     </script>
 </body>
