--- a/templates/gift_return.html
+++ b/templates/gift_return.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container flex">
-        <a href="" class="logo">
+        <a href="/" class="logo">
             <img src="../static/images/logo.png">
         </a>
     </header>
@@ -21,10 +21,7 @@
             <h1 class="phrase">おすすめの返礼品はこれ！</h1>
         </div>
     </main>
-    
-    <footer>
-        <p>@AITOTO</p>
-    </footer>
+
 </body>
 
 </html>
