--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container flex">
-        <a href="" class="logo">
+        <a href="/" class="logo">
             <img src="../static/images/logo.png">
         </a>
             <ul class="menu flex">
@@ -28,14 +28,16 @@
     </header>
 
     <main>
-        <div class="container flex">
-            <img src="../static/images/present.png" class="main-figure">
-            <h1 class="phrase">あなたの思い出をアーカイブ<br>返礼品を一緒に考えます</h1>
-        </div>
+        <section id="hero" class="container">
+            <div class="hero_inner">
+                <h1>あなたの思い出をアーカイブ</h1>
+                <p>お返し選びをサポートします</p>
+            </div>
+        </section>
     </main>
-    
+
     <footer>
-        <p>@AITOTO</p>
+        <p>AITOTO</p>
     </footer>
 </body>
 
