--- a/templates/question.html
+++ b/templates/question.html
@@ -142,7 +142,7 @@
             var age = document.getElementById('age').value;
             var relationship = document.getElementById('relationship').value;
             var occasion = document.getElementById('occasion').value;
-            var giftReason = document.getElementById('giftReason').value;
+            var giftReason = document.getElementById('budget').value;
 
             // 全ての項目が入力されている場合に送信ボタンを有効にする
             var submitButton = document.getElementById('submitButton');
