決済の追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,10 @@
                 <p>お返し選びをサポートします</p>
             </div>
         </section>
+        <div class="payment">
+            <h2>プレミアムプランの紹介</h2>
+            <button><a href="https://buy.stripe.com/test_5kAfZaaUCg707YIaEE">プレミアムプランを購入する</a></button>
+        </div>
     </main>
 
     <footer>
