--- a/static/css/style-index.css
+++ b/static/css/style-index.css
@@ -86,6 +86,29 @@ main {
     margin-bottom: 30px;
 }
 
+.payment {
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.payment h2 {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.payment button {
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #80BA4A;
+    color: white;
+    transition: 0.3s;
+}
+
 /* フッター */
 footer {
     width: 100%;
