--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,9 @@
             </div>
         </section>
         <div class="payment">
-            <h2>プレミアムプランの紹介</h2>
-            <button><a href="https://buy.stripe.com/test_5kAfZaaUCg707YIaEE">プレミアムプランを購入する</a></button>
+            <h2>プレミアム機能の紹介</h2>
+            <p>プレミアムプランを購入して頂くと，開発メンバー全員でお返しを一緒に考えます．</p>
+            <button><a href="https://buy.stripe.com/test_5kAfZaaUCg707YIaEE">購入する</a></button>
         </div>
     </main>
 
