--- a/templates/question.html
+++ b/templates/question.html
@@ -5,103 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プレゼントアンケート</title>
-    <link rel="stylesheet" href="static/css/style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 2% 10%;
-        }
-    </style>
+    <link rel="stylesheet" href="static/css/style-question.css">
 </head>
 
 <body>
-    <div class="title">
-        <h1>どの方にプレゼントされますか？</h1>
-    </div>
+    <header class="container flex">
+        <a href="/" class="logo">
+            <img src="../static/images/logo.png">
+        </a>
+    </header>
+    
+    <main>
+        <div class="title">
+            <h1>どの方にプレゼントされますか？</h1>
+        </div>
+        <div id="survey-form">
+            <form action="/submit_survey" method="post">
+                <label for="recipientName">贈り先の名前<span class="required-mark">*</span>:</label>
+                <input type="text" id="recipientName" name="recipientName">
 
-    <div id="survey-form">
-        <form action="/submit_survey" method="post">
-            <label for="recipientName">贈り先の名前<span class="required-mark">*</span>:</label>
-            <input type="text" id="recipientName" name="recipientName">
-
-            <label for="gender">性別<span class="required-mark">*</span>:</label>
-            <div class="gender-buttons">
-                <label class="gender-button" onclick="changeColor('blue')">
-                    <input type="hidden" id="maleHidden" name="genderMale" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="male" class="css-button-sliding-to-left--sky" name="genderMale"
-                        value="male">男性</button>
-                </label>
-                <label class="gender-button" onclick="changeColor('red')">
-                    <input type="hidden" id="femaleHidden" name="genderFemale" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="female" class="css-button-sliding-to-left--rose" name="genderFemale"
-                        value="female">女性</button>
-                </label>
-                <label class="gender-button" onclick="changeColor('gray')">
-                    <input type="hidden" id="otherHidden" name="genderOther" value="">
-                    <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
-                    <button type="button" id="other" class="css-button-sliding-to-left--grey" name="genderOther"
-                        value="other">その他</button>
-                </label>
-            </div>
-
-
-            <label>年齢<span class="required-mark">*</span>:</label>
-            <select name="age" id="age">
-                <!-- 最初は空欄に -->
-                <option value="" disabled selected>選択してください</option>
-                <option value="10s">~10代</option>
-                <option value="20s">20代</option>
-                <option value="30s">30代</option>
-                <option value="40s">40代</option>
-                <option value="50s">50代</option>
-                <option value="60s">60代以上</option>
-            </select>
-
-            <label>関係<span class="required-mark">*</span>:</label>
-            <select name="relationship" id="relationship">
-                <option value="" disabled selected>選択してください</option>
-                <option value="family">家族</option>
-                <option value="friends">友達</option>
-                <option value="partner">恋人</option>
-                <option value="acquaintance">知人</option>
-                <option value="otherRelation">その他</option>
-            </select>
-
-            <label>お祝いの種類<span class="required-mark">*</span>:</label>
-            <select name="occasion" id="occasion">
-                <option value="" disabled selected>選択してください</option>
-                <option value="birthday">誕生日</option>
-                <option value="graduation">卒業</option>
-                <option value="jobCelebration">就職</option>
-                <option value="marriageCelebration">結婚</option>
-                <option value="babyCelebration">出産</option>
-                <option value="acknowledgment">感謝</option>
-                <option value="otherOccasion">その他</option>
-            </select>
-
-            <label>予算<span class="required-mark">*</span>:</label>
-            <select name="budget" id="budget">
-                <option value="" disabled selected>選択してください</option>
-                <option value="birthday">~1千円</option>
-                <option value="graduation">~3千円</option>
-                <option value="jobCelebration">~5千円</option>
-                <option value="marriageCelebration">~1万円</option>
-                <option value="babyCelebration">~2万円</option>
-                <option value="acknowledgment">2万円~</option>
-            </select>
-
-            <label for="additionalNotes">その他の注意事項:</label>
-            <textarea id="additionalNotes" name="additionalNotes"></textarea>
-            <div class="flex_home">
-                <button type="submit" onclick="submitSurvey()">送信しておすすめ返礼品を見る</button>
-            </div>
-        </form>
-
-    </div>
+                <label for="gender">性別<span class="required-mark">*</span>:</label>
+                <div class="gender-buttons">
+                    <label class="gender-button" onclick="changeColor('blue')">
+                        <input type="hidden" id="maleHidden" name="genderMale" value="">
+                        <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                        <button type="button" id="male" class="css-button-sliding-to-left--sky" name="genderMale"
+                            value="male">男性</button>
+                    </label>
+                    <label class="gender-button" onclick="changeColor('red')">
+                        <input type="hidden" id="femaleHidden" name="genderFemale" value="">
+                        <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                        <button type="button" id="female" class="css-button-sliding-to-left--rose" name="genderFemale"
+                            value="female">女性</button>
+                    </label>
+                    <label class="gender-button" onclick="changeColor('gray')">
+                        <input type="hidden" id="otherHidden" name="genderOther" value="">
+                        <!-- Flaskで取得するため追加（非表示）value値はJSの関数changeColorで挿入 -->
+                        <button type="button" id="other" class="css-button-sliding-to-left--grey" name="genderOther"
+                            value="other">その他</button>
+                    </label>
+                </div>
+    
+    
+                <label>年齢<span class="required-mark">*</span>:</label>
+                <select name="age" id="age">
+                    <!-- 最初は空欄に -->
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="10s">~10代</option>
+                    <option value="20s">20代</option>
+                    <option value="30s">30代</option>
+                    <option value="40s">40代</option>
+                    <option value="50s">50代</option>
+                    <option value="60s">60代以上</option>
+                </select>
+    
+                <label>関係<span class="required-mark">*</span>:</label>
+                <select name="relationship" id="relationship">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="family">家族</option>
+                    <option value="friends">友達</option>
+                    <option value="partner">恋人</option>
+                    <option value="acquaintance">知人</option>
+                    <option value="otherRelation">その他</option>
+                </select>
+    
+                <label>お祝いの種類<span class="required-mark">*</span>:</label>
+                <select name="occasion" id="occasion">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="birthday">誕生日</option>
+                    <option value="graduation">卒業</option>
+                    <option value="jobCelebration">就職</option>
+                    <option value="marriageCelebration">結婚</option>
+                    <option value="babyCelebration">出産</option>
+                    <option value="acknowledgment">感謝</option>
+                    <option value="otherOccasion">その他</option>
+                </select>
+    
+                <label>予算<span class="required-mark">*</span>:</label>
+                <select name="budget" id="budget">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="birthday">~1千円</option>
+                    <option value="graduation">~3千円</option>
+                    <option value="jobCelebration">~5千円</option>
+                    <option value="marriageCelebration">~1万円</option>
+                    <option value="babyCelebration">~2万円</option>
+                    <option value="acknowledgment">2万円~</option>
+                </select>
+    
+                <label for="additionalNotes">その他の注意事項:</label>
+                <textarea id="additionalNotes" name="additionalNotes"></textarea>
+                <div class="flex_home">
+                    <button type="submit" onclick="submitSurvey()">送信しておすすめ返礼品を見る</button>
+                </div>
+            </form>
+    
+        </div>
+    </main>
 
     <script>
         // 性別のボタンの色を変える，性別の情報をボタンに合わせて書き換える
