--- a/templates/list.html
+++ b/templates/list.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <div class="title"><h1>MyLIST</h1></div>
+        <div class="title"><h1>MYLIST</h1></div>
         <div id="route-list" class="ui centered cards">
             {% for post in posts %}
             <div class="card">
