--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
     <link rel="stylesheet" href="static/css/style-index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.0/dist/semantic.min.css">
     <title>おもいでノート</title>
 </head>
 
 <body>
-    <header class="container flex">
-        <a href="/" class="logo">
-            <img src="../static/images/logo.png">
-        </a>
-            <ul class="menu flex">
-                {% if current_user.is_authenticated %}
-                    <li><a href="/preview_page">プレゼント登録</a></li>
-                    <li><a href="/list">マイリスト</a></li>
-                    <li><a href="/logout">ログアウト</a></li>
-                {% else %}
-                    <li><a href="/login">ログイン</a></li>
-                    <li><a href="/register">新規会員登録</a></li>
-                {% endif %}
-            </ul>
+    <header>
+        <div class="ui secondary menu stackable header-sticky">
+            <a href="/" class="logo">
+                <img src="../static/images/logo.png">
+            </a>
+            {% if current_user.is_authenticated %}
+                <a class="item" href="/">トップページ</a>
+                <a class="item" href="/preview_page">プレゼント登録</a>
+                <a class="item" href="/list">マイリスト</a>
+                <div class="right menu">
+                    <a class="ui item" href="/logout">ログアウト</a>
+                </div>
+            {% else %}
+                <div class="right menu">
+                    <a class="ui item" href="/register">新規会員登録</a>
+                    <a class="ui item" href="/login">ログイン</a>
+                </div>
+            {% endif %}
+        </div>
     </header>
-
     <main>
         <section id="hero" class="container">
             <div class="hero_inner">
                 <h1>あなたの思い出をアーカイブ</h1>
                 <p>お返し選びをサポートします</p>
+                <div class="button">
+                    {% if current_user.is_authenticated %}
+                    <button class="ui button green big"><a href="/preview_page">プレゼント登録</a></button>
+                    <button class="ui button yellow big"><a href="/list">マイリスト</a></button>
+                    {% else %}
+                        <button class="ui button green big"><a href="/register">新規会員登録</a></button>
+                        <button class="ui button yellow big"><a href="/login">ログイン</a></button>
+                    {% endif %}
+                </div>
+                <br>
+                
             </div>
         </section>
         <div class="payment">
