支払い後ページの追加

--- a/templates/cancel.html
+++ b/templates/cancel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style-success.css">
+    <link rel="stylesheet" href="static/css/style-cancel.css">
     <title>SUCCESS</title>
 </head>
 
@@ -16,7 +16,7 @@
     </header>
 
     <main class="container">
-        <h2>ご購入ありがとうございます<br>24時間以内に入力して頂いたメールアドレスにご連絡いたします</h2>
+        <h3>予期せぬエラーが発生しました</h1>
         <a href="{{ url_for('index') }}">ホームに戻る</a>
     </main>
 
